--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,9 @@
 FROM node:lts-alpine
 WORKDIR /APP
-ADD . .
+COPY . .
 RUN npm install
 RUN npm run build
-
+ENV NODE_ENV production
+EXPOSE 4173
 
 CMD ["npm", "run", "preview"]
