--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,8 +2,6 @@ FROM node:lts-alpine
 WORKDIR /APP
 COPY . .
 RUN npm install
-RUN npm run build
-ENV NODE_ENV production
-EXPOSE 4173
 
-CMD ["npm", "run", "preview"]
+
+CMD ["npm", "run", "dev"]
