--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:lts-alpine
+FROM node:16-alpine 
 WORKDIR /app
-COPY package.json .
-RUN npm install
 COPY . .
+RUN npm ci 
+RUN npm install
 
+ENV NODE_ENV development
+EXPOSE 5000
 CMD ["npm", "run", "dev"]
