--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,6 +4,5 @@ COPY . .
 RUN npm ci 
 RUN npm install
 
-ENV NODE_ENV development
 EXPOSE 5000
-CMD ["npm", "run", "dev"]
+CMD ["npx", "serve", "build"]
