--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,20 @@
-FROM node:16-alpine 
-WORKDIR /app
-COPY . .
-RUN npm ci 
-RUN npm install
+# pull official base image
+FROM node:13.12.0-alpine
 
-EXPOSE 5000
-CMD ["npm", "run", "dev"]
+# set working directory
+WORKDIR /app
+
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /app/node_modules/.bin:$PATH
+
+# install app dependencies
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm install --silent
+RUN npm install react-scripts@3.4.1 -g --silent
+
+# add app
+COPY . ./
+
+# start app
+CMD ["npm", "start"]
