--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,20 +1,8 @@
-# pull official base image
-FROM node:13.12.0-alpine
-
-# set working directory
+FROM node:16-alpine 
 WORKDIR /app
+COPY . .
+RUN npm ci 
+RUN npm install
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
-
-# add app
-COPY . ./
-
-# start app
-CMD ["npm", "start"]
+EXPOSE 5000
+CMD ["npm", "run", "dev"]
